syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.coen6731.grpc";

// Define the QueryRequest message with specified fields
message QueryRequest3 {
  string year = 1;
  string type = 2;
  string length = 3;
}

// Define the QueryResponse message with specified fields
message QueryResponse3 {
  string year = 1;
  string type = 2;
  string length = 3;
  string economical_states = 4;
}


// Define the gRPC service 
service QueryService3 {
  rpc GetQueryResult3 (QueryRequest3) returns (QueryResponse3);
}
